Lagt til søkeboks for tittel i html. Lagt til filter funksjonalitet i js. Søk med komma gir samme resultat som uten komma. Resultatene alfabetiseres.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             oninput="searchHymns()"
             placeholder="Salmenr (1-650)"
           />
+          <input type="text" id="search-query" placeholder="Søk salme" />
         </div>
       </header>
 
@@ -43,6 +44,7 @@
         <div id="hymn-container">
           <!-- Hymns will be inserted here -->
         </div>
+
         <div id="hymn-list">
           <!-- Hymns will be inserted here -->
         </div>
